@@ -40,20 +40,27 @@ OperationDetail::OperationDetail( const Glib::ustring & description, OperationDe
 
 void OperationDetail::set_description( const Glib::ustring & description, Font font )
 {
-	switch ( font )
+	try
 	{
-		case FONT_NORMAL:
-	 		this ->description = Glib::Markup::escape_text( description ) ;
-		 	break ;
-		case FONT_BOLD:
-	 		this ->description = "<b>" + Glib::Markup::escape_text( description ) + "</b>" ;
-		 	break ;
-		case FONT_ITALIC:
-	 		this ->description = "<i>" + Glib::Markup::escape_text( description ) + "</i>" ;
-		 	break ;
-		case FONT_BOLD_ITALIC:
-	 		this ->description = "<b><i>" + Glib::Markup::escape_text( description ) + "</i></b>" ;
-		 	break ;
+		switch ( font )
+		{
+			case FONT_NORMAL:
+		 		this ->description = Glib::Markup::escape_text( description ) ;
+			 	break ;
+			case FONT_BOLD:
+		 		this ->description = "<b>" + Glib::Markup::escape_text( description ) + "</b>" ;
+			 	break ;
+			case FONT_ITALIC:
+		 		this ->description = "<i>" + Glib::Markup::escape_text( description ) + "</i>" ;
+			 	break ;
+			case FONT_BOLD_ITALIC:
+		 		this ->description = "<b><i>" + Glib::Markup::escape_text( description ) + "</i></b>" ;
+			 	break ;
+		}
+	}
+	catch ( Glib::Exception & e )
+	{
+		this ->description = e .what() ;
 	}
 
 	on_update( *this ) ;
