@@ -1,3 +1,8 @@
+2006-08-24 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/OperationDetail.cc: catch markup exceptions
+	* src/Utils.cc: cleanups 
+
 2006-08-21 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/Utils.h,
